# strawberryfields

./: .env.sample  .gitignore  docker-compose.yml
api/: Dockerfile  pyproject.toml  requirements.txt  run.py
api/src/strawberryfields_api/: __init__.py  config.py
api/src/strawberryfields_api/_types/: __init__.py  _primordial.py
api/src/strawberryfields_api/routers/: __init__.py
api/src/strawberryfields_api/routers/artists/: __init__.py  auth.py
api/src/strawberryfields_api/routers/artists/music/: __init__.py  _types.py
api/src/strawberryfields_api/routers/artists/pitch/: __init__.py
api/src/strawberryfields_api/routers/companies/: __init__.py  auth.py  pitch.py
api/src/strawberryfields_api/services/_primordial/: __init__.py  _register.py  _sign_in.py
api/src/strawberryfields_api/services/artists/: __init__.py  _types.py  music.py  pitch.py
api/src/strawberryfields_api/services/companies/: __init__.py  _types.py  pitch.py
api/src/strawberryfields_api/utils/: __init__.py  auth.py  database.py  s3.py
db/: schema.sql
web/: package-lock.json  package.json
web/src/: App.vue
web/src/components/: PitchModal.vue
web/src/router/: index.js
web/src/stores/: index.js
web/src/views/: ArtistHome.vue  CompanyHome.vue  Home.vue  Register.vue  SignIn.vue
